<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    android:orientation="vertical"
    tools:context="com.nibiru.billingkaraoke.Activity.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_bar"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/Lin_Info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@color/maincolor">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/info_transaksi"
                            android:textColor="@android:color/white"
                            android:textSize="24sp" />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_horizontal">

                                    <de.hdodenhof.circleimageview.CircleImageView
                                        android:id="@+id/profile_image"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/kasir_logo"
                                        app:civ_border_color="@color/colorPrimary" />
                                </RelativeLayout>

                                <TableLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:padding="8dp">

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="8dp"
                                        android:layout_marginRight="8dp"
                                        android:layout_marginBottom="8dp">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginRight="14dp"
                                            android:text="@string/id_waiter" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:text="@string/td" />

                                        <TextView
                                            android:id="@+id/txtiduser"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginLeft="8dp"
                                            android:textColor="@android:color/black" />
                                    </TableRow>

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="8dp"
                                        android:layout_marginRight="8dp"
                                        android:layout_marginBottom="8dp">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/nama_waiter" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center"
                                            android:text="@string/td" />

                                        <TextView
                                            android:id="@+id/txtnmuser"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginLeft="8dp"
                                            android:textColor="@android:color/black" />
                                    </TableRow>

                                    <TableRow
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginLeft="8dp"
                                        android:layout_marginRight="8dp"
                                        android:layout_marginBottom="8dp">

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/level" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:gravity="center"
                                            android:text="@string/td" />

                                        <TextView
                                            android:id="@+id/txtstatususer"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginLeft="8dp"
                                            android:textColor="@android:color/black" />
                                    </TableRow>

                                </TableLayout>
                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="14dp"
                        android:paddingTop="14dp"
                        android:paddingRight="14dp"
                        android:paddingBottom="14dp">

                        <Button
                            android:id="@+id/btn_transaksi"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/roundbutton"
                            android:text="TRANSAKSI"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn_produk"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/roundbutton"
                            android:text="PRODUK"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn_report"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/roundbutton"
                            android:text="REPORT"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btn_logout"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/roundbutton_red"
                            android:text="LOGOUT"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
